<resources>
    <string name="app_name">LecturePresenceApp</string>
    <string name="fragment_my_subjects_title">Moji kolegiji:</string>
    <string name="fragment_subject_details_PR_br_sati">PR - ukupan broj sati: </string>
    <string name="fragment_subject_details_AV_br_sati">AV - ukupan broj sati: </string>
    <string name="fragment_subject_details_LV_br_sati">LV - ukupan broj sati: </string>
    <string name="fragment_subject_details_KV_br_sati">KV - ukupan broj sati: </string>
    <string name="fragment_subject_details_held_lectures">Održano (PR i AV): </string>
    <string name="fragment_subject_details_attended_lectures">Prisustvao (PR i AV): </string>
    <string name="fragment_subject_details_held_LVKV">Održano: </string>
    <string name="fragment_subject_details_attended_LVKV">Prisustvao: </string>
    <string name="fragment_successful_scan_message">Prisutnost evidentirana!</string>
    <string name="fragment_successful_scan_button">U redu</string>
    <string name="pr_held">Održano PR: </string>
    <string name="av_held">Održano AV: </string>
    <string name="lv_held">Održano LV: </string>
    <string name="kv_held">Održano KV: </string>
    <string name="list_of_pr_button">Popis predavanja</string>
    <string name="qr_code_title">QR Code:</string>
    <string name="qr_code_button">Detalji</string>
    <string name="fragment_lecture_name">Naziv: </string>
    <string name="fragment_lecture_type">Tip: </string>
    <string name="fragment_lecture_date">Vrijeme održavanja: </string>
    <string name="fragment_lecture_num_of_students">Broj prisutnih studenata: </string>
    <string name="fragment_lecture_num_of_lectures">Broj aktivnosti: </string>
    <string name="fragment_lecture_average_attendance">Prosječna prisutnost: </string>
    <string name="fragment_lecture_list_of_students">Popis prisutnih studenata: </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_title">Lecture Presence App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_title">Login</string>
    <string name="activity_login_register_button">Stvori novi račun</string>
</resources>