<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_1"
    tools:context=".professor.SubjectDetailsProfessorFragment">

    <TextView
        android:id="@+id/fragment_my_subjects_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:elevation="16dp"
        android:text="TextView"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/fragment_subject_details_title_view"
        app:layout_constraintStart_toStartOf="@+id/fragment_subject_details_title_view"
        app:layout_constraintTop_toTopOf="@+id/fragment_subject_details_title_view" />

    <TextView
        android:id="@+id/fragment_subject_details_my_subjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:elevation="16dp"
        android:text="@string/fragment_subject_details_PR_br_sati"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_subject_details_title_view" />

    <TextView
        android:id="@+id/fragment_subject_details_professor_PR_hours_num3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:elevation="16dp"
        android:text="@string/pr_held"
        android:textColor="#FAFC90"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_subject_details_professor_KV_hours_num" />

    <TextView
        android:id="@+id/fragment_subject_details_professor_PR_hours_num4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:elevation="16dp"
        android:text="@string/kv_held"
        android:textColor="#FAFC90"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_professor_av_progressbar" />

    <TextView
        android:id="@+id/fragment_subject_details_professor_PR_hours_num5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:elevation="16dp"
        android:text="@string/av_held"
        android:textColor="#FAFC90"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_subject_details_professor_KV_hours_num" />

    <TextView
        android:id="@+id/fragment_subject_details_professor_PR_hours_num6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:elevation="16dp"
        android:text="@string/lv_held"
        android:textColor="#FAFC90"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_professor_pr_progressbar" />

    <TextView
        android:id="@+id/fragment_subject_details_professor_LV_amount_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:elevation="16dp"
        android:text="text_view"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/fragment_subject_details_professor_LV_hours_num"
        app:layout_constraintTop_toBottomOf="@+id/fragment_subject_details_professor_AV_amount_hours" />

    <TextView
        android:id="@+id/fragment_subject_details_professor_AV_amount_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:elevation="16dp"
        android:text="text_view"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/fragment_subject_details_professor_AV_hours_num"
        app:layout_constraintTop_toBottomOf="@+id/fragment_subject_details_professor_PR_amount_hours" />

    <TextView
        android:id="@+id/fragment_subject_details_professor_KV_amount_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:elevation="16dp"
        android:text="text_view"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/fragment_subject_details_professor_KV_hours_num"
        app:layout_constraintTop_toBottomOf="@+id/fragment_subject_details_professor_LV_amount_hours" />

    <TextView
        android:id="@+id/fragment_subject_details_professor_PR_amount_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:elevation="16dp"
        android:text="text_view"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/fragment_subject_details_my_subjects"
        app:layout_constraintTop_toBottomOf="@+id/fragment_subject_details_title_view" />

    <TextView
        android:id="@+id/fragment_subject_details_professor_KV_hours_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:elevation="16dp"
        android:text="@string/fragment_subject_details_KV_br_sati"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_subject_details_professor_LV_hours_num" />

    <TextView
        android:id="@+id/fragment_subject_details_professor_LV_hours_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:elevation="16dp"
        android:text="@string/fragment_subject_details_LV_br_sati"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_subject_details_professor_AV_hours_num" />

    <TextView
        android:id="@+id/fragment_subject_details_professor_AV_hours_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:elevation="16dp"
        android:text="@string/fragment_subject_details_AV_br_sati"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_subject_details_my_subjects" />

    <View
        android:id="@+id/fragment_subject_details_title_view"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_background"
        android:elevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_background"
        android:text="@string/list_of_pr_button"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_professor_lv_progressbar" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:srcCompat="@drawable/ic_baseline_add_24" />

    <ProgressBar
        android:id="@+id/fragment_professor_pr_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/fragment_subject_details_professor_PR_hours_num3"
        app:layout_constraintStart_toStartOf="@+id/fragment_subject_details_professor_PR_hours_num3"
        app:layout_constraintTop_toBottomOf="@+id/fragment_subject_details_professor_PR_hours_num3" />

    <ProgressBar
        android:id="@+id/fragment_professor_av_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/fragment_subject_details_professor_PR_hours_num5"
        app:layout_constraintStart_toStartOf="@+id/fragment_subject_details_professor_PR_hours_num5"
        app:layout_constraintTop_toBottomOf="@+id/fragment_subject_details_professor_PR_hours_num5" />

    <ProgressBar
        android:id="@+id/fragment_professor_lv_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/fragment_subject_details_professor_PR_hours_num6"
        app:layout_constraintStart_toStartOf="@+id/fragment_subject_details_professor_PR_hours_num6"
        app:layout_constraintTop_toBottomOf="@+id/fragment_subject_details_professor_PR_hours_num6" />

    <ProgressBar
        android:id="@+id/fragment_professor_kv_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/fragment_subject_details_professor_PR_hours_num4"
        app:layout_constraintStart_toStartOf="@+id/fragment_subject_details_professor_PR_hours_num4"
        app:layout_constraintTop_toBottomOf="@+id/fragment_subject_details_professor_PR_hours_num4" />


</androidx.constraintlayout.widget.ConstraintLayout>